2007-04-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_r, igraph_evolver_mes_r)
	(igraph_evolver_st_r, igraph_evolver_error_r) : added

	* src/evolver.c (igraph_evolver_el, igraph_evolver_mes_el)
	(igraph_evolver_st_el, igraph_evolver_error_el) : added

2007-04-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_dl, igraph_evolver_mes_dl)
	(igraph_evolver_st_dl, igraph_evolver_error_dl) : added

	* src/evolver.c (igraph_evolver_l, igraph_evolver_mes_l)
	(igraph_evolver_st_l, igraph_evolver_error_l) : added

	* src/evolver.c (igraph_evolver_de, igraph_evolver_mes_de)
	(igraph_evolver_st_de, igraph_evolver_error_de) : added

	* src/evolver.c (igraph_evolver_e, igraph_evolver_mes_e)
	(igraph_evolver_st_e, igraph_evolver_error_e) : added

	* src/evolver.c (igraph_evolver_mes_ade) : bug corrected

	* src/evolver.c (igraph_evolver_ade, igraph_evolver_mes_ade)
	(igraph_evolver_st_ade, igraph_evolver_error_ade) : added

	* src/types.c (IGRAPH_ARRAY3_INIT_FINALLY) : added
	* src/array.c (igraph_array3_sum, igraph_array_multiply) : added

2007-04-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_error_d, igraph_evolver_error_ad) :
	error calculation modified

	* src/evolver.c (igraph_evolver_ad, igraph_evolver_error_d) :
	error calculation added
	
	* src/evolver.c (igraph_evolver_error_d) : bug corrected when
	logprob/lognull is NULL

	* src/evolver.c (igraph_evolver_d, igraph_evolver_error_d) :
	error calculation added

2007-04-17  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/community.c (igraph_community_clauset) : speed improvements
	* src/spmatrix.c (igraph_i_spmatrix_clear_row_fast)
	(igraph_i_spmatrix_cleanup) : added

2007-04-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/adjlist.c (IGRAPH_I_SORT_SIMPLIFY, IGRAPH_I_SORT) : removed
	* src/topology.c (igraph_isomorphic_vf2) : updated, uses 
	SIMPLIFY now, so it works for multigraphs
