@@ -6696,6 +6696,82 @@ SEXP R_igraph_evolver_r(SEXP graph, SEXP pniter, SEXP pwindow,
   UNPROTECT(2);
   return result;
 }
+
+SEXP R_igraph_evolver_ar(SEXP graph, SEXP pniter, SEXP pagebins, SEXP pwindow,
+			 SEXP psd, SEXP pnorm, SEXP pcites, SEXP pexpected,
+			 SEXP perror, SEXP pdebug) {
+  igraph_t g;
+  igraph_matrix_t kernel;  
+  igraph_integer_t niter=REAL(pniter)[0];  
+  igraph_integer_t agebins=REAL(pagebins)[0];
+  igraph_integer_t window=REAL(pwindow)[0];
+  igraph_bool_t sd=LOGICAL(psd)[0];
+  igraph_bool_t norm=LOGICAL(pnorm)[0];
+  igraph_bool_t cites=LOGICAL(pcites)[0];
+  igraph_bool_t expected=LOGICAL(pexpected)[0];
+  igraph_matrix_t debug, *ppdebug=0;
+  igraph_vector_ptr_t debugres, *ppdebugres=0;
+  igraph_matrix_t vsd, vnorm, vcites, vexpected;
+  igraph_matrix_t *pvsd=0, *pvnorm=0, *pvcites=0, *pvexpected=0;
+  igraph_real_t rlogprob, rlognull, *pplogprob=0, *pplognull=0;
+  SEXP result, names;
+  
+  R_igraph_before();
+  
+  R_SEXP_to_igraph(graph, &g);
+  igraph_matrix_init(&kernel, 0, 0);
+  if (sd) { igraph_matrix_init(&vsd, 0, 0); pvsd=&vsd; }
+  if (norm) { igraph_matrix_init(&vnorm, 0, 0); pvnorm=&vnorm; }
+  if (cites) { igraph_matrix_init(&vcites, 0, 0); pvcites=&vcites; }
+  if (expected) { igraph_matrix_init(&vexpected, 0, 0); pvexpected=&vexpected; }
+  if (LOGICAL(perror)[0]) { pplogprob=&rlogprob; pplognull=&rlognull; }
+  if (!isNull(pdebug) && GET_LENGTH(pdebug)!=0) {
+    R_SEXP_to_matrix(pdebug, &debug); ppdebug=&debug; 
+    igraph_vector_ptr_init(&debugres, 0); ppdebugres=&debugres;
+  }
+
+  igraph_evolver_ar(&g, niter, agebins, window, &kernel, pvsd, pvnorm, pvcites,
+		    pvexpected, pplogprob, pplognull, ppdebug, ppdebugres);
+
+  PROTECT(result=NEW_LIST(7));
+  SET_VECTOR_ELT(result, 0, R_igraph_matrix_to_SEXP(&kernel));
+  igraph_matrix_destroy(&kernel);
+  SET_VECTOR_ELT(result, 1, R_igraph_0ormatrix_to_SEXP(pvsd));
+  if (pvsd) { igraph_matrix_destroy(pvsd); }
+  SET_VECTOR_ELT(result, 2, R_igraph_0ormatrix_to_SEXP(pvnorm));
+  if (pvnorm) { igraph_matrix_destroy(pvnorm); }
+  SET_VECTOR_ELT(result, 3, R_igraph_0ormatrix_to_SEXP(pvcites));
+  if (pvcites) { igraph_matrix_destroy(pvcites); }
+  SET_VECTOR_ELT(result, 4, R_igraph_0ormatrix_to_SEXP(pvexpected));
+  if (pvexpected) { igraph_matrix_destroy(pvexpected); }
+  if (!isNull(pdebug) && GET_LENGTH(pdebug) != 0) {
+    /* TODO */
+  } else {
+    SET_VECTOR_ELT(result, 5, R_NilValue);
+  }
+  if (pplogprob) {
+    SET_VECTOR_ELT(result, 6, NEW_NUMERIC(2));
+    REAL(VECTOR_ELT(result, 6))[0]=*pplogprob;
+    REAL(VECTOR_ELT(result, 6))[1]=*pplognull;
+  } else {
+    SET_VECTOR_ELT(result, 6, R_NilValue);
+  }
+  PROTECT(names=NEW_CHARACTER(7));
+  SET_STRING_ELT(names, 0, CREATE_STRING_VECTOR("kernel"));
+  SET_STRING_ELT(names, 1, CREATE_STRING_VECTOR("sd"));
+  SET_STRING_ELT(names, 2, CREATE_STRING_VECTOR("norm"));
+  SET_STRING_ELT(names, 3, CREATE_STRING_VECTOR("cites"));
+  SET_STRING_ELT(names, 4, CREATE_STRING_VECTOR("expected"));
+  SET_STRING_ELT(names, 5, CREATE_STRING_VECTOR("debug"));
+  SET_STRING_ELT(names, 6, CREATE_STRING_VECTOR("error"));
+  SET_NAMES(result, names);
+  
+  R_igraph_after();  
+
+  UNPROTECT(2);
+  return result;
+  
+}
 			 
 /***********************************************/
 /* THE REST IS GENERATED BY inger.py           */
