@@ -3339,3 +3339,425 @@ int igraph_evolver_error_r(const igraph_t *graph,
 
   return 0;
 }
+
+/***********************************************/
+/* age, recent in-degree                       */
+/***********************************************/
+
+int igraph_evolver_ar(const igraph_t *graph,
+		      igraph_integer_t niter,
+		      igraph_integer_t agebins,
+		      igraph_integer_t window,
+		      igraph_matrix_t *kernel,
+		      igraph_matrix_t *sd,
+		      igraph_matrix_t *norm,
+		      igraph_matrix_t *cites,
+		      igraph_matrix_t *expected,
+		      igraph_real_t *logprob,
+		      igraph_real_t *lognull,
+		      const igraph_matrix_t *debug,
+		      igraph_vector_ptr_t *debugres) {
+
+  long int no_of_nodes=igraph_vcount(graph);
+  igraph_vector_t st;
+  long int i, j;
+  igraph_integer_t maxdegree=0;
+  igraph_vector_t neis;
+  
+  IGRAPH_VECTOR_INIT_FINALLY(&st, no_of_nodes);
+  IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
+  /* determine maximum recent degree, we use st temporarily */
+  for (i=0; i<no_of_nodes; i++) {
+    if (i-window>=0) {
+      IGRAPH_CHECK(igraph_neighbors(graph, &neis, i-window, IGRAPH_OUT));
+      for (j=0; j<igraph_vector_size(&neis); j++) {
+	long int to=VECTOR(neis)[j];
+	VECTOR(st)[to] -= 1;
+      }
+    }
+    IGRAPH_CHECK(igraph_neighbors(graph, &neis, i, IGRAPH_OUT));
+    for (j=0; j<igraph_vector_size(&neis); j++) {
+      long int to=VECTOR(neis)[j];
+      VECTOR(st)[to] += 1;
+      if (VECTOR(st)[to] > maxdegree) {
+	maxdegree=VECTOR(st)[to];
+      }
+    }
+  }
+  igraph_vector_destroy(&neis);
+  IGRAPH_FINALLY_CLEAN(1);
+  
+  for (i=0; i<no_of_nodes; i++) {
+    VECTOR(st)[i]=1;
+  }
+  
+  for (i=0; i<niter; i++) {
+
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    if (i+1!=niter) {		/* not the last iteration */
+      /* measure */
+      IGRAPH_CHECK(igraph_evolver_mes_ar(graph, kernel, 0 /*sd*/, 0 /*norm*/, 
+					 0 /*cites*/, 0 /*debug*/, 0 /*debugres*/,
+					 &st, agebins, window, maxdegree));
+      
+      /* normalize */
+      igraph_matrix_multiply(kernel, 1/igraph_matrix_sum(kernel));
+      
+      /* update st */
+      IGRAPH_CHECK(igraph_evolver_st_ar(graph, &st, kernel, window));
+    } else {			/* last iteration */
+      /* measure */
+      IGRAPH_CHECK(igraph_evolver_mes_ar(graph, kernel, sd, norm, cites, debug,
+					debugres, &st, agebins, window, maxdegree));
+      
+      /* normalize */
+      igraph_matrix_multiply(kernel, 1/igraph_matrix_sum(kernel));
+      
+      /* update st */
+      IGRAPH_CHECK(igraph_evolver_st_ar(graph, &st, kernel, window));
+      
+      /* expected number of citations */
+      if (expected) {
+	IGRAPH_CHECK(igraph_evolver_exp_ar(graph, expected, kernel,
+					  &st, agebins, window, maxdegree));
+      }
+      
+      /* error calculation */
+      if (logprob || lognull) {
+	IGRAPH_CHECK(igraph_evolver_error_ar(graph, kernel, &st, 
+					     agebins, window, maxdegree,
+					     logprob, lognull));
+      }
+    }
+    
+  }
+  
+  igraph_vector_destroy(&st);
+  IGRAPH_FINALLY_CLEAN(1);
+  return 0;
+}
+
+int igraph_evolver_mes_ar(const igraph_t *graph,
+			  igraph_matrix_t *kernel,
+			  igraph_matrix_t *sd,
+			  igraph_matrix_t *norm,
+			  igraph_matrix_t *cites,
+			  const igraph_matrix_t *debug,
+			  igraph_vector_ptr_t *debugres,
+			  const igraph_vector_t *st,
+			  igraph_integer_t pagebins,
+			  igraph_integer_t pwindow,
+			  igraph_integer_t maxind) {
+
+  long int classes=maxind+1;
+  long int agebins=pagebins;
+  long int window=pwindow;
+  long int no_of_nodes=igraph_vcount(graph);
+  long int binwidth=no_of_nodes/agebins+1;
+  
+  igraph_vector_t indegree;
+  igraph_matrix_t v_normfact, *normfact;
+  igraph_matrix_t ntk, ch;
+  igraph_matrix_t v_notnull, *notnull;
+
+  igraph_vector_t neis;
+  
+  long int node;
+  long int i, j, k;
+  long int edges=0;
+  
+  IGRAPH_VECTOR_INIT_FINALLY(&indegree, no_of_nodes);
+  IGRAPH_MATRIX_INIT_FINALLY(&ntk, agebins+1, classes);
+  IGRAPH_MATRIX_INIT_FINALLY(&ch, agebins+1, classes);
+  IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
+  if (norm) {
+    normfact=norm;
+    IGRAPH_CHECK(igraph_matrix_resize(normfact, agebins, classes));
+    igraph_matrix_null(normfact);
+  } else {
+    normfact=&v_normfact;
+    IGRAPH_MATRIX_INIT_FINALLY(normfact, agebins, classes);
+  }
+  if (cites) {
+    notnull=cites;
+    IGRAPH_CHECK(igraph_matrix_resize(notnull, agebins, classes));
+    igraph_matrix_null(notnull);
+  } else {
+    notnull=&v_notnull;
+    IGRAPH_MATRIX_INIT_FINALLY(notnull, agebins, classes);
+  }
+  
+  IGRAPH_CHECK(igraph_matrix_resize(kernel, agebins, classes));
+  igraph_matrix_null(kernel);
+  if (sd) { 
+    IGRAPH_CHECK(igraph_matrix_resize(sd, agebins, classes)); 
+    igraph_matrix_null(sd);
+  }
+
+  MATRIX(ntk, binwidth>1 ? 0 : 1, 0)=1;
+  
+  for (node=0; node<no_of_nodes-1; node++) {
+    
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    /* Estimate A() */
+    IGRAPH_CHECK(igraph_neighbors(graph, &neis, node+1, IGRAPH_OUT));
+    for (i=0; i<igraph_vector_size(&neis); i++) {
+      long int to=VECTOR(neis)[i];
+      long int xidx=(node+1-to)/binwidth;
+      long int yidx=VECTOR(indegree)[to];
+      
+      double xk=VECTOR(*st)[node]/MATRIX(ntk, xidx, yidx);
+      double oldm=MATRIX(*kernel, xidx, yidx);
+      MATRIX(*notnull, xidx, yidx)+=1;
+      MATRIX(*kernel, xidx, yidx) += (xk-oldm)/MATRIX(*notnull, xidx, yidx);
+      if (sd) {
+	MATRIX(*sd, xidx, yidx) += (xk-oldm)*(xk-MATRIX(*kernel, xidx, yidx));
+      }
+      /* TODO: debug */
+    }
+    
+    /* Update ntk & co */
+    edges += igraph_vector_size(&neis);
+    for (i=0; i<igraph_vector_size(&neis); i++) {
+      long int to=VECTOR(neis)[i];
+      long int xidx=(node+1-to)/binwidth;
+      long int yidx=VECTOR(indegree)[to];
+      
+      VECTOR(indegree)[to] += 1;
+      MATRIX(ntk, xidx, yidx) -= 1;
+      if (MATRIX(ntk, xidx, yidx)==0) {
+	MATRIX(*normfact, xidx, yidx) += (edges-MATRIX(ch, xidx, yidx));
+      }
+      MATRIX(ntk, xidx, yidx+1) += 1;
+      if (MATRIX(ntk, xidx, yidx+1)==1) {
+	MATRIX(ch, xidx, yidx+1)=edges;
+      }
+    }
+    MATRIX(ntk, 0, 0) += 1;
+    if (MATRIX(ntk, 0, 0)==1) {
+      MATRIX(ch, 0, 0)=edges;
+    }
+    
+    /* Time window updates */
+    if (node+1-window >= 0) {
+      IGRAPH_CHECK(igraph_neighbors(graph, &neis, node+1-window, IGRAPH_OUT));
+      for (i=0; i<igraph_vector_size(&neis); i++) {
+	long int to=VECTOR(neis)[i];
+	long int xidx=(node+1-to)/binwidth;
+	long int yidx=VECTOR(indegree)[to];
+	VECTOR(indegree)[to] -= 1;
+	MATRIX(ntk, xidx, yidx) -= 1;
+	if (MATRIX(ntk, xidx, yidx)==0) {
+	  MATRIX(*normfact, xidx, yidx) += (edges-MATRIX(ch, xidx, yidx));
+	}
+	MATRIX(ntk, xidx, yidx-1) += 1;
+	if (MATRIX(ntk, xidx, yidx-1)==1) {
+	  MATRIX(ch, xidx, yidx-1)=edges;
+	}
+      }
+    }
+    
+    /* Aging */
+    for (k=1; node+1-binwidth*k+1>=0; k++) {
+      long int shnode=node+1-binwidth*k+1;
+      long int deg=VECTOR(indegree)[shnode];
+      MATRIX(ntk, k-1, deg)--;
+      if (MATRIX(ntk, k-1, deg)==0) {
+	MATRIX(*normfact, k-1, deg) += (edges-MATRIX(ch, k-1, deg));
+      }
+      MATRIX(ntk, k, deg) += 1;
+      if (MATRIX(ntk, k, deg)==1) {
+	MATRIX(ch, k, deg)=edges;
+      }
+    }
+    
+  }
+  
+  /* Make normfact up to date, calculate mean, sd */
+  for (i=0; i<agebins; i++) {
+    for (j=0; j<classes; j++) {
+      igraph_real_t oldmean;
+      if (MATRIX(ntk, i, j) != 0) {
+	MATRIX(*normfact, i, j) += (edges-MATRIX(ch, i, j));
+      }
+      if (MATRIX(*normfact, i, j)==0) {
+	MATRIX(*kernel, i, j)=0;
+	MATRIX(*normfact, i, j)=1;
+      }
+      oldmean=MATRIX(*kernel, i, j);
+      MATRIX(*kernel, i, j) *= MATRIX(*notnull, i, j) / MATRIX(*normfact, i, j);
+      if (sd) {
+	MATRIX(*sd, i, j) += oldmean * oldmean * MATRIX(*notnull, i, j) *
+	  (1-MATRIX(*notnull, i, j)/MATRIX(*normfact, i, j));
+	MATRIX(*sd, i, j) = sqrt(MATRIX(*sd, i, j)/(MATRIX(*normfact, i, j)-1));
+      }
+    }
+  }
+  
+  if (!cites) {
+    igraph_matrix_destroy(notnull);
+    IGRAPH_FINALLY_CLEAN(1);
+  }
+  if (!norm) {
+    igraph_matrix_destroy(normfact);
+    IGRAPH_FINALLY_CLEAN(1);
+  }
+  igraph_vector_destroy(&neis);
+  igraph_matrix_destroy(&ch);
+  igraph_matrix_destroy(&ntk);
+  igraph_vector_destroy(&indegree);
+  IGRAPH_FINALLY_CLEAN(4);
+
+  return 0;
+}
+
+int igraph_evolver_st_ar(const igraph_t *graph,
+			 igraph_vector_t *st,
+			 const igraph_matrix_t *kernel,
+			 igraph_integer_t pwindow) {
+  
+  long int agebins=igraph_matrix_nrow(kernel);
+  long int no_of_nodes=igraph_vcount(graph);
+  long int window=pwindow;
+  long int binwidth=no_of_nodes/agebins+1;
+  igraph_vector_t indegree;
+  igraph_vector_t neis;
+  
+  long int node;
+  long int i, k;
+  
+  IGRAPH_VECTOR_INIT_FINALLY(&indegree, no_of_nodes);
+  IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
+  IGRAPH_CHECK(igraph_vector_resize(st, no_of_nodes));
+  VECTOR(*st)[0]=MATRIX(*kernel, binwidth>1 ? 0 : 1, 0);
+  
+  for (node=1; node<no_of_nodes; node++) {
+
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    /* new node */
+    VECTOR(*st)[node]=VECTOR(*st)[node-1]+MATRIX(*kernel, 0, 0);
+    
+    /* outgoing edges */
+    IGRAPH_CHECK(igraph_neighbors(graph, &neis, node, IGRAPH_OUT));
+    for (i=0; i<igraph_vector_size(&neis); i++) {
+      long int to=VECTOR(neis)[i];
+      long int xidx=(node-to)/binwidth;
+      long int yidx=VECTOR(indegree)[to];
+      VECTOR(indegree)[to]+=1;
+      VECTOR(*st)[node] += 
+	-MATRIX(*kernel, xidx, yidx)+MATRIX(*kernel, xidx, yidx+1);
+    }
+    
+    /* time window update */
+    if (node-window >=0) {
+      IGRAPH_CHECK(igraph_neighbors(graph, &neis, node-window, IGRAPH_OUT));
+      for (i=0; i<igraph_vector_size(&neis); i++) {
+	long int to=VECTOR(neis)[i];
+	long int xidx=(node-to)/binwidth;
+	long int yidx=VECTOR(indegree)[to];
+	VECTOR(indegree)[to] -= 1;
+	VECTOR(*st)[node] += 
+	  -MATRIX(*kernel, xidx, yidx)+MATRIX(*kernel, xidx, yidx-1);
+      }
+    }
+
+    /* aging */
+    for (k=1; node-binwidth*k+1 >= 0; k++) {
+      long int shnode=node-binwidth*k+1;
+      long int deg=VECTOR(indegree)[shnode];
+      VECTOR(*st)[node] += -MATRIX(*kernel, k-1, deg)+MATRIX(*kernel, k, deg);
+    }    
+  }
+  
+  igraph_vector_destroy(&neis);
+  igraph_vector_destroy(&indegree);
+  IGRAPH_FINALLY_CLEAN(2);
+
+  return 0;
+}
+
+int igraph_evolver_exp_ar(const igraph_t *graph,
+			  igraph_matrix_t *expected,
+			  const igraph_matrix_t *kernel,
+			  const igraph_vector_t *st,
+			  igraph_integer_t agebins,
+			  igraph_integer_t window,
+			  igraph_integer_t pmaxind) {
+  /* TODO */
+  return 0;
+}
+
+int igraph_evolver_error_ar(const igraph_t *graph,
+			    const igraph_matrix_t *kernel,
+			    const igraph_vector_t *st,
+			    igraph_integer_t pagebins,
+			    igraph_integer_t pwindow,
+			    igraph_integer_t maxind,			   
+			    igraph_real_t *logprob,
+			    igraph_real_t *lognull) {
+
+  long int no_of_nodes=igraph_vcount(graph);
+  long int agebins=pagebins;
+  long int window=pwindow;
+  long int binwidth=no_of_nodes/agebins+1;
+  igraph_vector_t indegree;
+  igraph_vector_t neis;
+  
+  long int node;
+  long int i;
+
+  igraph_real_t rlogprob, rlognull, *mylogprob=logprob, *mylognull=lognull;
+  
+  IGRAPH_VECTOR_INIT_FINALLY(&indegree, no_of_nodes);
+  IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
+
+  if (!mylogprob) { mylogprob=&rlogprob; }
+  if (!mylognull) { mylognull=&rlognull; }
+
+  *mylogprob=0;
+  *mylognull=0;
+  
+  for (node=0; node<no_of_nodes-1; node++) {
+    
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    IGRAPH_CHECK(igraph_neighbors(graph, &neis, node+1, IGRAPH_OUT));
+    for (i=0; i<igraph_vector_size(&neis); i++) {
+      long int to=VECTOR(neis)[i];
+      long int xidx=(node+1-to)/binwidth;
+      long int yidx=VECTOR(indegree)[to];
+      
+      igraph_real_t prob=MATRIX(*kernel, xidx, yidx)/VECTOR(*st)[node];
+      igraph_real_t nullprob=1.0/(node+1);
+
+      *mylogprob += log(prob);
+      *mylognull += log(nullprob);
+    }
+    
+    /* update */
+    for (i=0; i<igraph_vector_size(&neis); i++) {
+      long int to=VECTOR(neis)[i];
+      VECTOR(indegree)[to] += 1;
+    }
+
+    /* time window updates */
+    if (node-window+1 >= 0) {
+      IGRAPH_CHECK(igraph_neighbors(graph, &neis, node-window+1, IGRAPH_OUT));
+      for (i=0; i<igraph_vector_size(&neis); i++) {
+	long int to=VECTOR(neis)[i];
+	VECTOR(indegree)[to] -= 1;
+      }
+    }
+    
+    /* Aging update not needed */
+  }
+  
+  igraph_vector_destroy(&neis);
+  igraph_vector_destroy(&indegree);
+  IGRAPH_FINALLY_CLEAN(2);
+
+  return 0;
+}
