@@ -1,5 +1,8 @@
 2007-04-20  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* src/evolver.c (igraph_evolver_ar, igraph_evolver_mes_ar)
+	(igraph_evolver_st_ar, igraph_evolver_error_ar) : added
+
 	* src/evolver.c (igraph_evolver_r, igraph_evolver_mes_r)
 	(igraph_evolver_st_r, igraph_evolver_error_r) : added
 
